--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,6 +28,11 @@ header{
 	display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: 'Libre Baskerville Regular', serif;
+}
+
+.header-img{
+    height: 50px;
 }
 
 .my-table{
@@ -140,4 +145,15 @@ span.collapsing{
 	.cart{
 		height: 24px;
 	}
+}
+
+.price-div{
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
